# stack

./: .gitignore  .gitigonore  README.md
ch01/: Makefile  README.md  fde.py  min6502.py  min_riscv.py
ch01/e6502/: 6502.md  Makefile  README.md
ch01/solutions/: ex02_loop.py  solutions.md
ch02/: Makefile  README.md  assembler.py  control_flow.py  reg_vm.py  stack_vm.py
ch02/c/: .gitignore  Makefile  README.md  stack_vm.c
ch02/solutions/: ex01_mod.py  ex02_trace.py  ex03_iterative_fact.py  ex04_callee_saved.py  ex05_dispatch.py  solutions.md
ch03/: Makefile  README.md  dfa.py
ch03/finite_automata/: .gitignore  README.md  dfa.c  dfa.py
ch03/solutions/: ex01_number_exponent.py  ex02_underscore_idents.py  ex03_cmp_dfa.py  ex04_line_comments.py  solutions.md
ch03/tokenizer/: README.md  STATE.md  regexp.py  state.py  tokenerrors.py  tokens.py
ch04/: .gitignore  Makefile  README.md
ch04/02_recursive/: README.md  arith.c  parse.py  parse2.py
ch04/03_ll1/: LL1.py  README.md
ch04/04_pushdown/: README.md  pda.c  pda.py
ch04/05_bottomup/: README.md  aabb.py  (+2 more)
ch05/: Makefile  README.md
ch06/: Makefile  README.md
ch07/: .gitignore  Makefile  README.md
ch08/: .gitignore  Makefile  README.md
ch09/: .gitignore  Makefile  README.md
ch10/: .gitignore  Makefile  README.md
ch11/: .gitignore  Makefile  README.md
ch12/: .gitignore  Makefile  README.md
ch13/: Makefile  README.md
comp/: AIMS.md  LOG.md  Makefile  OPTIMIZE.md  ORACLE.md  PROVE.md  README.md  SELFHOST.md
lark/: README.md
lark/05/runtime/: CMakeLists.txt  platform_posix.c
solutions/: README.md
(+999 files in other folders)
